# rust-aec

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
src/: autostart.rs  config.rs  engine.rs  main.rs  tray.rs
src/aec/: mod.rs
src/audio/: capture.rs  device.rs  loopback.rs  mod.rs  pcm.rs  render.rs  session_monitor.rs
src/sync/: mod.rs
