[package]
name = "rust_aec"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
ringbuf = "0.4"
ctrlc = "3"
anyhow = "1"
sonora = "0.1"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
]
