[package]
name = "rust_aec"
version = "0.2.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
ringbuf = "0.4"
anyhow = "1"
sonora = "0.1"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_RemoteDesktop",
]

[build-dependencies]
embed-resource = "3"
